[package]
name = "sync-that-thing-please"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.19.1"
serde = "1.0.126"
serde_yaml = "0.8.7"
serde_derive = "1.0.126"

[[bin]]
name = "sync-that-thing-please"
path = "main.rs"
